analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/danglingAnnotationOnTopLevelFunction.kt
annotation class Ann

@Ann(
<caret>fun foo() = 42